сделал по секторам

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
   <main>
-    <h1 class="visually-hidden">Card</h1>
-    <section class="card-info">
+    <h1 class="visually-hidden">Time for children</h1>
+    <section class="time">
       <div class="clock">
         <div class="hand hour" data-hour-hand></div>
         <div class="hand minute" data-minute-hand></div>
@@ -32,11 +32,36 @@
         <div class="number number10">10</div>
         <div class="number number11">11</div>
         <div class="number number12">12</div>
+        <div class="number number13">13</div>
+        <div class="number number14">14</div>
+        <div class="number number15">15</div>
+        <div class="number number16">16</div>
+        <div class="number number17">17</div>
+        <div class="number number18">18</div>
+        <div class="number number19">19</div>
+        <div class="number number20">20</div>
+        <div class="number number21">21</div>
+        <div class="number number22">22</div>
+        <div class="number number23">23</div>
+        <div class="number number24">24</div>
       </div>
-   </section>
+      <div class="clock wheel">
+        <div class="letters">
+          <span class="n1">спать</span>
+          <span class="n2">опять спать</span>
+          <span class="n3">3 </span>
+          <span class="n4">4</span>
+          <span class="n5">5</span>
+          <span class="n6">6</span>
+          <span class="n7">7</span>
+          <span class="n8">8</span>
+          <span class="n9">9</span>
+          <span class="n10">10</span>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="index.js"></script>
-
 </body>
 
 </html>
