почти готово расписание

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Визитка</title>
+  <title>Режим дня</title>
   <link rel="preload" href="fonts/roboto.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/robotomedium.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/robotobold.woff2" as="font" crossorigin="anonymous">
@@ -48,15 +48,15 @@
       <div class="clock wheel">
         <div class="letters">
           <span class="n1">спать</span>
-          <span class="n2">опять спать</span>
-          <span class="n3">3 </span>
-          <span class="n4">4</span>
-          <span class="n5">5</span>
-          <span class="n6">6</span>
-          <span class="n7">7</span>
-          <span class="n8">8</span>
-          <span class="n9">9</span>
-          <span class="n10">10</span>
+          <span class="n2" title="Подьем, зарядка,завтрак,чистка зубов, заправляем кровать">Подьем, зарядка,завтрак</span>
+          <span class="n3" title="Teaching work">Домашние задания</span>
+          <span class="n4" title="">отдых</span>
+          <span class="n5" title="Home work">Домашние дела</span>
+          <span class="n6" title="Вокруг 3 домов">Прогулка с Бильбо</span>
+          <span class="n7" title="Взять телефон">Сбор портфеля в школу</span>
+          <span class="n8" title="Дойти до школы,Учеба">Школа </span>
+          <span class="n9" title="Возвращение со школы->Тренировка->Домой" >Тренировка</span>
+          <span class="n10" title="Кушать->Чистить зубы->Свободное время">Свободное время</span>
         </div>
       </div>
     </section>
